# Tangle

./: .gitmodules  CMakeLists.txt  CMakePresets.json  version.txt
cmake/: platform.cmake  project.cmake
demo/: CMakeLists.txt  tge_multi_window_demo.cpp  tge_opengl_demo.cpp  tge_typing_demo.cpp  tge_window_demo.cpp
src/tge/: keyboard.cpp  keyboard.hpp  monitor.cpp  monitor.hpp  tge.cpp  tge.hpp  window.cpp  window.hpp
src/tge/api/: keyboard.hpp  monitor.hpp  mouse.hpp  window.hpp
src/tge/impl/linux/: keyboard.cpp  keyboard.hpp  monitor.cpp  monitor.hpp  tge_linux.cpp  tge_linux.hpp  window.cpp  window.hpp
src/tge/impl/windows/: keyboard.cpp  keyboard.hpp  keyboard.inl  monitor.cpp  monitor.hpp  tge_windows.cpp  tge_windows.hpp  window.cpp  window.hpp
src/tge/impl/windows/detail/: keyboard.cpp  keyboard.hpp
test/: CMakeLists.txt
